Fix text overlap between banner and movie rows

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -14,7 +14,7 @@
 }
 
 .rows_container {
-    margin-top: -150px;
+    margin-top: -80px;
     padding: 0 4%;
     position: relative;
     z-index: 10;
